[gd_scene load_steps=9 format=3 uid="uid://bjase3xwis1gj"]

[ext_resource type="Texture2D" uid="uid://c1vfb8rcegnet" path="res://images/Buttoning/upgrade base.png" id="1_1vhjh"]
[ext_resource type="Texture2D" uid="uid://c2omuuv3uvqj0" path="res://images/Buttoning/upgrade base_pressed.png" id="2_ieqve"]
[ext_resource type="Texture2D" uid="uid://dkt83jm8fu65" path="res://images/Buttoning/upgrade base_hover.png" id="3_88y5r"]
[ext_resource type="Texture2D" uid="uid://c5fo8sb7555qv" path="res://images/Buttoning/upgrade base_disabled.png" id="4_qydo2"]
[ext_resource type="Script" path="res://unique_scripts/upgrades/ewartifact_up.gd" id="5_c8rte"]
[ext_resource type="PackedScene" uid="uid://nbtwv14kxwq8" path="res://Scenes/upgrades/purchased/ewartifact_upp.tscn" id="6_he56i"]
[ext_resource type="Texture2D" uid="uid://blo6piwrcsmxt" path="res://images/UpgradeIcon/upgrades/enchantedwep.png" id="7_wrotf"]

[sub_resource type="Theme" id="Theme_tesf0"]
default_font_size = 16

[node name="ewartifact_up" type="TextureButton" groups=["Persist"]]
visible = false
custom_minimum_size = Vector2(75, 75)
offset_right = 75.0
offset_bottom = 75.0
theme = SubResource("Theme_tesf0")
texture_normal = ExtResource("1_1vhjh")
texture_pressed = ExtResource("2_ieqve")
texture_hover = ExtResource("3_88y5r")
texture_disabled = ExtResource("4_qydo2")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("5_c8rte")
title = "Enchanted Weapons"
description = "Increases Kobold's Income based on the amount of Artifacts owned"
cost = 50000000
tier = 2
build_req = 10
target_node = ExtResource("6_he56i")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 150.0
offset_bottom = 150.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_wrotf")

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="timeout" from="Timer" to="." method="timeout"]
